[gd_scene load_steps=25 format=3 uid="uid://ba7yefjge3rjc"]

[ext_resource type="Script" uid="uid://c5llwle352r6f" path="res://scripts/manager/card_manager.gd" id="1_vv81i"]
[ext_resource type="Script" uid="uid://h4kkw30hjgsr" path="res://scripts/ui/card/conveyor_belt.gd" id="2_tqsle"]
[ext_resource type="Texture2D" uid="uid://cpweorxgjagtw" path="res://assets/image/ui/ui_card/ConveyorBelt_backdrop.png" id="3_5tf7m"]
[ext_resource type="Texture2D" uid="uid://clu7agu73dxr8" path="res://assets/image/ui/ui_card/ConveyorBelt.png" id="4_28eva"]
[ext_resource type="PackedScene" uid="uid://cjuiaaq33o5aa" path="res://scenes/ui/card.tscn" id="5_4ijtu"]
[ext_resource type="Texture2D" uid="uid://hvvk2fdgo3pw" path="res://assets/image/ui/ui_card/SeedBank.png" id="6_2krpg"]
[ext_resource type="Script" uid="uid://bd3w3y5b02dut" path="res://scripts/ui/main_game_ui/card_bar.gd" id="7_3h5n2"]
[ext_resource type="Texture2D" uid="uid://dw6btivnki0kt" path="res://assets/image/ui/ui_card/SeedPacketSilhouette.png" id="8_gs6iv"]
[ext_resource type="Texture2D" uid="uid://47ixd5hsddft" path="res://assets/image/ui/ui_card/ShovelBank.png" id="9_te4xe"]
[ext_resource type="Script" uid="uid://drl7ywtxslsbm" path="res://scripts/ui/card/shovel_in_ui.gd" id="10_eik7c"]
[ext_resource type="Texture2D" uid="uid://dh1c6v7dpaxmd" path="res://assets/image/ui/ui_card/Shovel.png" id="11_mld3t"]
[ext_resource type="Texture2D" uid="uid://bgy071auro307" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Background.png" id="12_t78gq"]
[ext_resource type="Texture2D" uid="uid://b1fuu1s6nfxnq" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Button_Glow.png" id="13_x2w4g"]
[ext_resource type="Texture2D" uid="uid://gy84wwo8bimw" path="res://assets/image/ui/ui_card/all_card/SeedChooser_Button_Glow2.png" id="14_if2w5"]
[ext_resource type="Script" uid="uid://parybxg7tb1k" path="res://scripts/ui/PVZ_button_base.gd" id="15_x8ru2"]
[ext_resource type="Texture2D" uid="uid://bb6ohgnxwvi02" path="res://assets/image/ui/ui_card/SeedChooser_Button2.png" id="16_4ijtu"]
[ext_resource type="Script" uid="uid://g4oasdi4hqv7" path="res://scripts/ui/card/re_card_button.gd" id="16_tqsle"]
[ext_resource type="Texture2D" uid="uid://qdi7snnimhh0" path="res://assets/image/ui/ui_card/SeedChooser_Button2_Glow.png" id="17_2krpg"]
[ext_resource type="BitMap" uid="uid://bxyj17qxinwq6" path="res://assets/image/ui/ui_card/SeedChooser_Button2_Mask.png" id="18_3h5n2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tf6e"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iuyhw"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 6
particles_anim_loop = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0roe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x628s"]
texture = ExtResource("6_2krpg")
texture_margin_left = 80.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jbbka"]

[node name="CardManager" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 676.0
offset_bottom = 600.0
mouse_filter = 2
script = ExtResource("1_vv81i")

[node name="ConveyorBelt" type="Control" parent="." node_paths=PackedStringArray("CB_list")]
z_index = 100
z_as_relative = false
anchors_preset = 0
offset_top = -94.0
offset_right = 631.0
offset_bottom = -7.0
script = ExtResource("2_tqsle")
CB_list = [NodePath("BG/ConveyorBeltGear/ConveyorBeltGear1"), NodePath("BG/ConveyorBeltGear/ConveyorBeltGear2"), NodePath("BG/ConveyorBeltGear/ConveyorBeltGear3")]
time_create_cd = 5.0
card_type = Array[int]([51, 52, 53])
card_type_probability = Array[int]([5, 1, 1])
card_type_start_list = Array[int]([51, 52, 53])

[node name="BG" type="TextureRect" parent="ConveyorBelt"]
layout_mode = 0
offset_left = 107.0
offset_right = 623.0
offset_bottom = 86.0
texture = ExtResource("3_5tf7m")

[node name="ConveyorBeltGear" type="Panel" parent="ConveyorBelt/BG"]
clip_children = 1
layout_mode = 0
offset_left = 7.0
offset_top = 63.0
offset_right = 509.0
offset_bottom = 79.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2tf6e")

[node name="ConveyorBeltGear3" type="TextureRect" parent="ConveyorBelt/BG/ConveyorBeltGear"]
material = SubResource("CanvasItemMaterial_iuyhw")
layout_mode = 0
offset_left = 438.0
offset_right = 940.0
offset_bottom = 15.0
texture = ExtResource("4_28eva")
expand_mode = 3
stretch_mode = 2

[node name="ConveyorBeltGear2" type="TextureRect" parent="ConveyorBelt/BG/ConveyorBeltGear"]
material = SubResource("CanvasItemMaterial_iuyhw")
layout_mode = 0
offset_left = 138.0
offset_right = 640.0
offset_bottom = 15.0
texture = ExtResource("4_28eva")
expand_mode = 3
stretch_mode = 2

[node name="ConveyorBeltGear1" type="TextureRect" parent="ConveyorBelt/BG/ConveyorBeltGear"]
material = SubResource("CanvasItemMaterial_iuyhw")
layout_mode = 2
offset_left = -162.0
offset_right = 340.0
offset_bottom = 15.0
texture = ExtResource("4_28eva")
expand_mode = 3
stretch_mode = 2

[node name="CardArea" type="Panel" parent="ConveyorBelt/BG"]
clip_children = 1
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 510.0
offset_bottom = 78.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_q0roe")

[node name="CardPosition" parent="ConveyorBelt/BG/CardArea" instance=ExtResource("5_4ijtu")]
visible = false
layout_mode = 2
offset_left = 512.0
offset_right = 562.0

[node name="Timer" type="Timer" parent="ConveyorBelt"]

[node name="CardBarAndShovel" type="HBoxContainer" parent="."]
z_index = 100
z_as_relative = false
layout_mode = 0
offset_left = 13.0
offset_top = -94.0
offset_right = 227.0
offset_bottom = -4.0
theme_override_constants/separation = 0

[node name="Marker2DSunTarget" type="Marker2D" parent="CardBarAndShovel"]
position = Vector2(40, 35)

[node name="CardBarBg" type="PanelContainer" parent="CardBarAndShovel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x628s")
script = ExtResource("7_3h5n2")

[node name="SunLabelControl" type="Control" parent="CardBarAndShovel/CardBarBg"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CurrSunValue" type="Label" parent="CardBarAndShovel/CardBarBg/SunLabelControl"]
layout_mode = 2
offset_left = -101.0
offset_top = 51.0
offset_right = 14.0
offset_bottom = 79.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "999990"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardUiList" type="HBoxContainer" parent="CardBarAndShovel/CardBarBg"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CardPlaceholder_ori" type="TextureRect" parent="CardBarAndShovel/CardBarBg/CardUiList"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="MarginContainer" type="MarginContainer" parent="CardBarAndShovel"]
layout_mode = 2
theme_override_constants/margin_bottom = 18

[node name="ShovelBg" type="TextureRect" parent="CardBarAndShovel/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_te4xe")
script = ExtResource("10_eik7c")

[node name="Shovel" type="TextureRect" parent="CardBarAndShovel/MarginContainer/ShovelBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_mld3t")

[node name="Button" type="Button" parent="CardBarAndShovel/MarginContainer/ShovelBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jbbka")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jbbka")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_jbbka")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jbbka")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jbbka")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jbbka")

[node name="Label" type="Label" parent="CardBarAndShovel/MarginContainer/ShovelBg"]
layout_mode = 0
offset_left = 54.0
offset_top = 50.0
offset_right = 72.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "F"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardChooser" type="Control" parent="."]
z_index = 1100
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 15.0
offset_right = 498.0
offset_bottom = 526.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CardChooser"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.5
offset_top = -513.0
offset_right = 232.5
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("12_t78gq")

[node name="GridContainer" type="GridContainer" parent="CardChooser/TextureRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 32.0
offset_right = 450.0
offset_bottom = 449.0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 0
columns = 8

[node name="CardPlaceholder" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder2" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder3" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder4" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder5" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder6" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder7" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder8" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder9" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder10" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder11" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder12" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder13" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder14" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder15" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder16" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder17" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder18" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder19" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder20" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder21" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder22" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder23" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder24" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder25" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder26" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder27" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder28" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder29" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder30" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder31" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder32" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder33" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder34" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder35" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder36" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder37" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder38" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder39" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder40" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder41" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder42" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder43" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder44" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder45" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder46" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder47" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="CardPlaceholder48" type="TextureRect" parent="CardChooser/TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("8_gs6iv")

[node name="TextureButton" type="TextureButton" parent="CardChooser/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = 202.5
offset_right = 72.5
offset_bottom = 244.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture_normal = ExtResource("13_x2w4g")
texture_pressed = ExtResource("14_if2w5")
texture_hover = ExtResource("14_if2w5")
script = ExtResource("15_x8ru2")

[node name="ReCardButton" type="TextureButton" parent="CardChooser/TextureRect"]
layout_mode = 0
offset_left = 327.5
offset_top = 467.0
offset_right = 438.5
offset_bottom = 498.0
texture_normal = ExtResource("16_4ijtu")
texture_pressed = ExtResource("17_2krpg")
texture_click_mask = ExtResource("18_3h5n2")
script = ExtResource("16_tqsle")

[node name="Label" type="Label" parent="CardChooser/TextureRect/ReCardButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 105.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0, 0.431373, 0, 1)
theme_override_font_sizes/font_size = 15
text = "重选上次卡片"

[node name="TemporaryCard" type="Control" parent="."]
z_index = 1150
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="mouse_entered" from="ConveyorBelt/BG" to="ConveyorBelt" method="_on_bg_mouse_entered"]
[connection signal="mouse_exited" from="ConveyorBelt/BG" to="ConveyorBelt" method="_on_bg_mouse_exited"]
[connection signal="mouse_entered" from="CardBarAndShovel/CardBarBg" to="CardBarAndShovel/CardBarBg" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardBarAndShovel/CardBarBg" to="CardBarAndShovel/CardBarBg" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CardBarAndShovel/MarginContainer/ShovelBg" to="CardBarAndShovel/MarginContainer/ShovelBg" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardBarAndShovel/MarginContainer/ShovelBg" to="CardBarAndShovel/MarginContainer/ShovelBg" method="_on_mouse_exited"]
[connection signal="pressed" from="CardBarAndShovel/MarginContainer/ShovelBg/Button" to="CardBarAndShovel/MarginContainer/ShovelBg" method="_on_button_pressed"]
[connection signal="pressed" from="CardChooser/TextureRect/TextureButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="CardChooser/TextureRect/ReCardButton" to="." method="_on_re_card_button_pressed"]
